--- a/main.html
+++ b/main.html
@@ -7,6 +7,19 @@
 </head>
 
 <body>
+
+	<nav>
+		<ul>
+			<a href = "https://www.youtube.com/" >Home</a>
+			<a href = "https://www.youtube.com/">About us</a>
+			<a href = "https://www.youtube.com/">Contact us</a>
+		</ul>
+	</nav>
+	<h1>3 random images</h1>
+	<img src = "https://picsum.photos/id/123/200/300" alt = "image1" >
+		<img src = "https://picsum.photos/id/124/200/300" alt = "image3" >
+	<img src = "https://picsum.photos/id/125/200/300" alt = "image3" >
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
